--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -3,6 +3,8 @@
 @prefix : <http://ontologi.es/doap-deps#>.
 
 `Acme-ZydecoTesting-App1`
+	:runtime-requirement    [ :on "perl 5.014"^^:CpanId ];
+	:runtime-requirement    [ :on "Zydeco 0.602"^^:CpanId ];
 	:test-requirement       [ :on "Test::More 0.96"^^:CpanId ];
 	:develop-recommendation [ :on "Dist::Inkt 0.001"^^:CpanId ];
 	.
